# Projects

./: README.md
VotingSystem2.0/testing/: Ballot_tests.cpp  CMakeLists.txt  Candidate_tests.cpp  FindLastPlace_test.cc  FindWinner_test.cc  IRBallot_tests.cpp  IRElection_test.cc  Makefile  MultiFilesTests.cpp  MultiFilesTests.h  OPLELection_tests.cpp  OPLParty_tests.cpp  POElection_tests.cpp  Redistribute_test.cc  RemoveInvalidBallotTests.cpp  RunRunoff_test.cc
VotingSystem2.0/testing/IR_input_files/: IRPopularity.csv  IR_All_Votes_For_One_Candidate.csv  IR_FindLastPlace_Tie.csv  IR_FindWinner_MajorityWin.csv  IR_FindWinner_PopularityTie.csv  IR_FindWinner_PopularityWin.csv  IR_General_Majority.csv  IR_Invalid_AllBallots.csv  IR_Invalid_ManyBallots.csv  IR_Invalid_NoBallots.csv  IR_No_Candidates.csv  IR_Redistribute_Base.csv  IR_Redistribute_Ranked.csv  IR_RunRunoff.csv  IR_muti_tie_candidates.csv  IR_no_votes.csv  IR_one_candidate_has_no_vote.csv  IR_stress_test.csv  IR_tie.csv  test.csv
VotingSystem2.0/testing/IR_input_files/multiFiles/: IR_Invalid_MultiFile1.csv  IR_Invalid_MultiFile2.csv  IR_MultiFiles13.csv  (+6 more)
VotingSystem2.0/testing/OPL_input_files/: OPL_Candidate_no_votes.csv  OPL_Multi_Way_Tie.csv  OPL_No_Seats.csv  OPL_No_Votes.csv  OPL_Tie_Candidates.csv  OPL_all_votes_to_one_candidate.csv  OPL_general.csv  OPL_more_seats_than_candidates.csv  OPL_no_candidates.csv  OPL_one_party.csv  OPL_stress_test.csv  OPL_tie_party.csv
VotingSystem2.0/testing/PO_input_files/: PO_MultiFiles_inconsistent1.csv  PO_MultiFiles_inconsistent2.csv  PO_MultiFiles_inconsistent3.csv
(+411 files in other folders)
